# yoke-shaving

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  yoke.proto
proto/: yoke.proto
src/: stitches.py
test/: measurements.textproto
